# chip8

./: Cargo.toml  README.md  justfile
src/: command.rs  config.rs  cpu.rs  display.rs  emulator.rs  interpret.rs  lib.rs  memory.rs  opcode.rs
src/io/: keyboard.rs  mod.rs  timer.rs
