[package]
name = "chip8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oorandom = "11.1.3"
js-sys = {version = "0.3.35", optional=true}
log = { version = "0.4.19", default-features = false }

[features]
default = ["std"]
std = []
js = ["js-sys"]
